--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="nav">
     <ul>
       <li>
-        <a href="https://www.notion.so/fatishub/My-Dashboard-885b824480e8416a84766d2c556a9d8e?pvs=4" onclick="navigate(this.id)" class="key c27 fn">
+        <a onclick="navigate(this.id)" class="key c27 fn">
           <span id="home">Home<br>
             <i class="fa-solid fa-house">
             </i>
@@ -28,7 +28,7 @@
       </li>
 
       <li>
-        <a href="https://www.notion.so/fatishub/Daily-72693b51fd1c4bf08727a4d3dee1c2dd?pvs=4#f98d1c04798846719377632036b00114" onclick="navigate(this.id)" class="key c112 fn">
+        <a onclick="navigate(this.id)" class="key c112 fn">
           <span id="inbox">inbox<br>
             <i class="fa-solid fa-inbox">
             </i>
@@ -37,28 +37,28 @@
       </li>
 
       <li>
-        <a href="https://www.notion.so/fatishub/Daily-72693b51fd1c4bf08727a4d3dee1c2dd?pvs=4" onclick="navigate(this.id)" class="key c113 fn">
+        <a onclick="navigate(this.id)" class="key c113 fn">
           <span id="planner">planner<br>
             <i class="fa-solid fa-book"></i </span>
         </a>
       </li>
 
       <li>
-        <a href="https://www.notion.so/fatishub/Business-5449adad975b4c00b8484f68bf5f1541?pvs=4" onclick="navigate(this.id)" class="key c115 fn">
+        <a onclick="navigate(this.id)" class="key c115 fn">
           <span id="business">work<br>
             <i class="fa-solid fa-briefcase"></i>
           </span>
         </a>
       </li>
       <li>
-        <a href="https://www.notion.so/fatishub/Learning-a4747ce62b9a486e9ac92ffb884dbde8?pvs=4" onclick="navigate(this.id)" class="key c116 fn">
+        <a onclick="navigate(this.id)" class="key c116 fn">
           <span id="learning">learning<br>
             <i class="fa-solid fa-brain"></i></span>
         </a>
       </li>
 
       <li>
-        <a href="https://www.notion.so/fatishub/Note-fc639ee7deb14626a9751780bfa91ac6?pvs=4" onclick="navigate(this.id)" class="key c117 fn">
+        <a onclick="navigate(this.id)" class="key c117 fn">
           <span id="notes">notes<br>
             <i class="fa-solid fa-clipboard"></i>
           </span>
@@ -66,7 +66,7 @@
       </li>
 
       <li>
-        <a href="https://www.notion.so/fatishub/Journal-5cafb07dfb474dbcb0cc5003131cad41?pvs=4" onclick="navigate(this.id)" class="key c120 fn">
+        <a onclick="navigate(this.id)" class="key c120 fn">
           <span id="journal">journal<br>
             <i class="fa-solid fa-pen-nib"></i></span>
         </a>
