--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <style>
 
-  * {margin: 0; padding: 0;}
+  * {margin: 0 0 0 5px; padding: 0;}
 
 body {
 	background: white;
@@ -86,7 +86,7 @@ body {
   position:absolute;
 	z-index: 20;
 	margin: 5px auto 20px;
-  width: 950px;
+  width: 970px;
 	height: 70px;
 	background: #bbb;
 	background-image: -webkit-gradient(
@@ -123,7 +123,7 @@ body {
 		0 4px 0 #bbb,
 		0 10px 30px #ddd;}
 
-ul {list-style-type: none; width: 910px; margin:  auto;}
+ul {list-style-type: none; width: 950px; margin:  auto;}
 li {float: left;}
 
 
