--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <!-------->
 
 <body>
-  <div class="nav">
+    <div class="nav">
     <ul>
       <li>
-        <a onclick="navigate(this.id)" class="key c27 fn">
-          <span id="home">Home<br>
+        <a class="key c27 fn">
+          <span id="home" onclick="navigate(this.id)" href="#">Home<br>
             <i class="fa-solid fa-house">
             </i>
           </span>
@@ -28,8 +28,8 @@
       </li>
 
       <li>
-        <a onclick="navigate(this.id)" class="key c112 fn">
-          <span id="inbox">inbox<br>
+        <a class="key c112 fn">
+          <span id="inbox" onclick="navigate(this.id)" href="#">inbox<br>
             <i class="fa-solid fa-inbox">
             </i>
           </span>
@@ -37,37 +37,37 @@
       </li>
 
       <li>
-        <a onclick="navigate(this.id)" class="key c113 fn">
-          <span id="planner">planner<br>
-            <i class="fa-solid fa-book"></i </span>
+        <a class="key c113 fn">
+          <span id="planner" onclick="navigate(this.id)" href="#">planner<br>
+            <i class="fa-solid fa-book"></i> </span>
         </a>
       </li>
 
       <li>
-        <a onclick="navigate(this.id)" class="key c115 fn">
-          <span id="business">work<br>
+        <a class="key c115 fn">
+          <span id="business" onclick="navigate(this.id)" href="#">work<br>
             <i class="fa-solid fa-briefcase"></i>
           </span>
         </a>
       </li>
       <li>
-        <a onclick="navigate(this.id)" class="key c116 fn">
-          <span id="learning">learning<br>
+        <a class="key c116 fn">
+          <span id="learning" onclick="navigate(this.id)" href="#">learning<br>
             <i class="fa-solid fa-brain"></i></span>
         </a>
       </li>
 
       <li>
-        <a onclick="navigate(this.id)" class="key c117 fn">
-          <span id="notes">notes<br>
+        <a class="key c117 fn">
+          <span id="notes" onclick="navigate(this.id)" href="#">notes<br>
             <i class="fa-solid fa-clipboard"></i>
           </span>
         </a>
       </li>
 
       <li>
-        <a onclick="navigate(this.id)" class="key c120 fn">
-          <span id="journal">journal<br>
+        <a class="key c120 fn">
+          <span id="journal" onclick="navigate(this.id)" href="#">journal<br>
             <i class="fa-solid fa-pen-nib"></i></span>
         </a>
       </li>
@@ -76,17 +76,16 @@
   </div>
 
 <style>
-
-  * {margin: 0 0 0 5px; padding: 0;}
+* {margin: 0 0 0 5px; padding: 0;}
 
 body {
-	background: white;
+	background: #f8f8f8;
 }
 .nav {
   position:absolute;
 	z-index: 20;
 	margin: 5px auto 20px;
-  width: 945px;
+  width: 1400px;
 	height: 70px;
 	background: #bbb;
 	background-image: -webkit-gradient(
@@ -123,7 +122,7 @@ body {
 		0 4px 0 #bbb,
 		0 10px 30px #ddd;}
 
-ul {list-style-type: none; width: 950px; margin:  auto;}
+ul {list-style-type: none; width: 1350px; margin:  auto;}
 li {float: left;}
 
 
@@ -133,7 +132,7 @@ li {float: left;}
 	font: bold 9pt arial;
 	text-decoration: none;
 	text-align: center;
-	width: 120px;
+	width: 177px;
 	height: 41px;
 	margin: 5px;
 	background: #eff0f2;
