--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 * {margin: 0 0 0 5px; padding: 0;}
 
 body {
-	background: #f8f8f8;
+	background: white;
 }
 .nav {
   position:absolute;
 	z-index: 20;
 	margin: 5px auto 20px;
-  width: 1400px;
+  width: 1230px;
 	height: 70px;
 	background: #bbb;
 	background-image: -webkit-gradient(
@@ -122,7 +122,7 @@ body {
 		0 4px 0 #bbb,
 		0 10px 30px #ddd;}
 
-ul {list-style-type: none; width: 1350px; margin:  auto;}
+ul {list-style-type: none; width: 1230px; margin:  auto;}
 li {float: left;}
 
 
@@ -132,7 +132,7 @@ li {float: left;}
 	font: bold 9pt arial;
 	text-decoration: none;
 	text-align: center;
-	width: 177px;
+	width: 160px;
 	height: 41px;
 	margin: 5px;
 	background: #eff0f2;
