--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <li>
         <a class="key c115 fn">
-          <span id="business" onclick="navigate(this.id)" href="#">work<br>
+          <span id="work" onclick="navigate(this.id)" href="#">work<br>
             <i class="fa-solid fa-briefcase"></i>
           </span>
         </a>
